--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,14 @@ services:
   web:
     build: ./back-end
     ports:
-      - "8080:8080"
+      - "8000:8000"
     volumes:
       - ./back-end:/usr/src/app
+
+  keycloak:
+      image: wizzn/keycloak:14
+      ports:
+          - "8080:8080"
+      environment:
+          - KEYCLOAK_USER=admin
+          - KEYCLOAK_PASSWORD=admin
