--- a/back-end/package.json
+++ b/back-end/package.json
@@ -8,6 +8,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "react-router-dom": "^4.2.2",
+    "keycloak-js": "4.0.0-beta.2"
   }
 }
