--- a/back-end/package.json
+++ b/back-end/package.json
@@ -8,6 +8,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.1"
+    "aws-sdk": "^2.1033.0",
+    "express": "^4.16.1",
+    "multer": "^1.4.3",
+    "multer-s3": "^2.10.0"
   }
 }
