--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,6 +11,7 @@
     "aws-sdk": "^2.1033.0",
     "express": "^4.16.1",
     "multer": "^1.4.3",
-    "multer-s3": "^2.10.0"
+    "multer-s3": "^2.10.0",
+    "web3": "^1.6.1"
   }
 }
