--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "polideck_web_app",
+  "name": "polideckdse",
   "version": "1.0.0",
-  "description": "Running Node.js",
-  "author": "Major Brown",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "description": "",
+  "main": "index.js",
   "dependencies": {
-    "aws-sdk": "^2.1033.0",
-    "express": "^4.16.1",
-    "multer": "^1.4.3",
-    "multer-s3": "^2.10.0",
-    "web3": "^1.6.1"
-  }
+    "@metamask/eth-sig-util": "^4.0.0",
+    "dotenv": "^15.0.0",
+    "envfile": "^6.17.0",
+    "express": "^4.17.2",
+    "lowdb": "^3.0.0",
+    "redis": "^4.0.3"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "node index.js"
+  },
+  "author": "",
+  "license": "ISC"
 }
