--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "aws-sdk": "^2.1033.0",
     "express": "^4.16.1",
+    "fs": "^0.0.1-security",
+    "ipfs-http-client": "^56.0.1",
     "multer": "^1.4.3",
     "multer-s3": "^2.10.0",
     "web3": "^1.6.1"
