--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,7 +9,8 @@
     "envfile": "^6.17.0",
     "express": "^4.17.2",
     "lowdb": "^3.0.0",
-    "redis": "^4.0.3"
+    "redis": "^4.0.3",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {},
   "scripts": {
