--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,20 +5,21 @@
   "main": "index.js",
   "dependencies": {
     "@metamask/eth-sig-util": "^4.0.0",
+    "aws-sdk": "^2.1033.0",
     "dotenv": "^15.0.0",
+    "ejs": "^3.1.6",
     "envfile": "^6.17.0",
     "express": "^4.17.2",
-    "lowdb": "^3.0.0",
-    "redis": "^4.0.3",
-    "jsonwebtoken": "^8.5.1",
-    "aws-sdk": "^2.1033.0",
+    "express-fileupload": "^1.3.1",
     "fs": "^0.0.1-security",
     "ipfs-http-client": "^56.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "lowdb": "^3.0.0",
     "multer": "^1.4.3",
     "multer-s3": "^2.10.0",
+    "redis": "^4.0.3",
     "web3": "^1.6.1"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node index.js"
   },
