--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.3",
     "multer-s3": "^2.10.0",
     "redis": "^4.0.3",
+    "solc": "^0.8.13",
     "web3": "^1.6.1"
   },
   "scripts": {
